[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-kanban"
version = "0.1.0"
description = "SQLite-backed Kanban board for multi-profile, multi-project collaboration — extracted from hermes-agent"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "J Hashemi"},
]
keywords = ["kanban", "task-queue", "sqlite", "agent-coordination", "hermes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/jhashemi/hermes-kanban"
Repository = "https://github.com/jhashemi/hermes-kanban"
Changelog = "https://github.com/jhashemi/hermes-kanban/blob/master/CHANGELOG.md"
Issues = "https://github.com/jhashemi/hermes-kanban/issues"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "stress: stress/concurrency tests (deselect with '-m \"not stress\"')",
    "integration: integration tests requiring full environment",
]